files/finalOutput.txt
  File "../files/finalOutput.py", line 5
    print "0,2"
        ^
IndentationError: expected an indented block
